# FancyClock

./: .coveragerc  .flake8  .gitignore  ARCHITECTURE.md  DEVELOPER_README.md  DEVELOPMENT_README.md  FLATPAK_README.md  README.md  analog_clock.py  batch_translator.py  build_exe.py  build_flatpak.sh  build_utils.py  builddmg.py  buildexe.py  buildinstaller.py  cleanupflatpak.sh  compose_alarm_badge.py  dialogs.py  digital_clock.py  dmg_icon.py  font_test.py  generate_icons.py  main.py  monitor_libretranslate.sh  ntp_client.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings_store.py  single_instance.py  stamp_version.py  timezone_locale_map.json  translate_timezones.py  uk.codecrafter.FancyClock.metainfo.xml  uk.codecrafter.FancyClock.yml  utils.py  version.py
assets/: fancyclock.icns
docs/: index.html  robots.txt  site.webmanifest  sitemap.xml
effects/: galaxy.py
fancyclock/: __init__.py  entrypoint.py  main.py  version.py  window.py  window_animation.py  window_locale.py  window_menu.py  window_opacity.py  window_skin.py  window_time.py
helper_scripts/: __init__.py  add_credits_media_key.py  add_skins_key.py  auto_map_all_timezones.py  clean_timezone_menuitem.py  config_translations.py  fallback_locale_variants.py  fix_about_author_labels.py  fix_author_labels.py  fix_digits.py  fix_single_dot_placeholders.py  fix_specific_digits.py  fix_suspicious_with_regional_fallbacks.py  inspect_argentina_mappings.py  libretranslate_client.py  list_locales.py  repair_arabic_timezone_and_digits.py  report_and_fix_suspicious_translations.py  translator.py  (+3 more)
(+192 files in other folders)
