[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fancyclock"
# Single source of truth: the version is read from the VERSION file at build
# time (the runtime reads the same file via fancyclock.version). Never
# hardcode a version here.
dynamic = ["version"]
description = "Cross-platform desktop clock with analog and digital modes"
authors = [{name = "Oliver Ernster", email = "oernster@codecrafter.uk"}]
license = {text = "LGPL-3.0-only"}
requires-python = ">=3.11"
dependencies = ["PySide6>=6.7.0"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["fancyclock*"]

[tool.black]
line-length = 88
target-version = ["py313"]
include = "\\.pyi?$"
extend-exclude = """
(
  \\bvenv\\b
  | \\bbuild\\b
  | \\bdist\\b
)
"""

[tool.ruff]
line-length = 88
extend-exclude = ["venv", "build", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=fancyclock --cov-report=term-missing --cov-fail-under=100 --cov-config=.coveragerc"
pythonpath = ["."]
